# coven

./: .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  IDEAS.md  README.md  board.md  brief.md  clippy.toml  dist-workspace.toml  dist.toml  ideas.md  issues.md  scratch.md  task.md  workflow.md
.cargo/: config.toml
.claude/: settings.json
.coven/: system.md  workflow.md
design/: orchestration.md
docs/: github-action-setup.md
ignore/: improve-steering-test.md  input-handler-no-unit-tests.md  process-exit-code-lost.md
issues/: agent-claude-args.md  audit-agent-no-commit-behavior.md  audit-agent-sleep-affordance.md  audit-code-quality.md  audit-documentation.md  audit-snapshot-tests.md  audit-templates-and-prompts.md  bash-display-timeout.md  cdata-injection-in-fork-reintegration.md  claude-stderr-discarded.md  ctrl-o-interrupted-state.md  dead-code-ff-merge-main.md  deduplicate-dispatch-issue-system.md  dispatch-args-display-unsorted.md  dispatch-drops-non-string-yaml-args.md  dispatch-missing-audit-invocation-rules.md  evaluate-worker-status-abstraction.md  explicit-review-cap.md  extract-tag-inner-nested-tags.md  fix-plan-vs-implement-priority.md  fix-workflow-repo-url.md  flush-result-overwritten-by-process-exit.md  fork-empty-session-id.md  fork-reintegration-body-not-xml-escaped.md  format-message-no-unit-tests.md  frontmatter-summary-command.md  gc-force-and-remove-error.md  has-flag-misses-equals-syntax.md  has-flag-no-unit-tests.md  improve-steering-test.md  input-handler-bypasses-generic-writer.md  input-handler-bypasses-renderer-writer.md  input-handler-no-unit-tests.md  interactive-mode-exits-immediately.md  interactive-mode-keypress-leak.md  interactive-session-on-interrupt.md  investigate-interrupt-resume-error.md  is-pid-alive-spawns-subprocess.md  land-conflict-detection-swallows-git-errors.md  main-head-sha-ignores-git-failure.md  (+22 more)
plans/: agent-prompt-file-loading.md  audit-conflict-resolution.md  clear-review-on-plan-edit.md  cli-args-duplication.md  concurrency-safe-issue-claiming.md  concurrent-subagent-rendering.md  concurrent-worker-testing.md  concurrent-workers-duplicate-work.md  context-forking.md  ctrl-c-interrupt.md  dead-no-stream-flag.md  dedup-vcr-recording.md  dispatch-lock-timeout.md  duplicated-error-rendering.md  duplicated-input-wait-loops.md  duplicated-tool-call-rendering.md  durable-conflict-logging.md  edit-diff-dead-code.md  features-reference-doc.md  flush-buffer-fork-detection.md  flush-event-buffer-result-handling.md  followup-display-cleanup.md  fork-ui-iteration.md  fork-vcr-support.md  git-based-plan-review-discovery.md  git-worktree-primitives.md  graceful-ctrl-c.md  init-claude-md-prompt.md  interrupt-then-prompt.md  issue-priorities.md  land-or-resolve-complexity.md  land-retry-on-ff-failure.md  landed-message-no-commits.md  leading-blank-lines.md  main-head-sha-dedup.md  mcp-tool-name-shortening.md  migrate-serde-yaml.md  multiline-input-clearing.md  orchestration-issues.md  orchestration-next-steps.md  (+43 more)
questions/: theme-colors.md  (+6 more)
(+289 files in other folders)
