[package]
name = "coven"
version = "0.1.0"
edition = "2024"
authors = ["Yoav Tzfati <yoav.tzfati@gmail.com>"]
license = "MIT"
description = "A minimal streaming display and workflow runner for Claude Code's -p mode"
readme = "README.md"
repository = "https://github.com/Crazytieguy/coven"
homepage = "https://github.com/Crazytieguy/coven"
keywords = ["claude", "cli", "tui", "streaming", "workflow"]
categories = ["command-line-utilities", "development-tools"]


[[bin]]
name = "record-vcr"
path = "src/bin/record_vcr.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
insta = "1.46.3"
