[package]
name = "coven"
version = "0.1.2"
edition = "2024"
authors = ["Yoav Tzfati <yoav.tzfati@gmail.com>"]
license = "MIT"
description = "A minimal streaming display and workflow runner for Claude Code's -p mode"
readme = "README.md"
repository = "https://github.com/Crazytieguy/coven"
homepage = "https://github.com/Crazytieguy/coven"
keywords = ["claude", "cli", "tui", "streaming", "workflow"]
categories = ["command-line-utilities", "development-tools"]


[[bin]]
name = "record-vcr"
path = "src/bin/record_vcr.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
fs2 = "0.4.3"
futures = "0.3.31"
handlebars = "6.4.0"
libc = "0.2.181"
notify = "8.2.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
unicode-width = "0.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
insta = "1.46.3"
tempfile = "3"
